feat: benchmark added

--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -9,6 +9,7 @@ risc0-zkvm = { version = "^2.3.1", features = ["prove"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = "1.0"
 serde_json = "1.0"
+chrono = "0.4"
 # For c0/c1 extraction
 ark-bn254 = "0.4"
 ark-serialize = "0.4"
